{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 371,
  "lineage": "41164e12-2f14-a2e4-40eb-0156451c1fcb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP_ALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00f78a74e8b3ca179",
            "public_dns": "ec2-52-2-176-252.compute-1.amazonaws.com",
            "public_ip": "52.2.176.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PrivateEC2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:694989999113:instance/i-05ad4c5ee1f3b87ed",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ad4c5ee1f3b87ed",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkpdp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-023b89217e45fa0f9",
            "private_dns": "ip-10-0-2-128.ec2.internal",
            "private_ip": "10.0.2.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b7e60809554cd452",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000aa4e913dc5c5e1",
            "tags": {
              "Name": "PrivateEC2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f2ec47c0a405cce"
            ]
          },
          "dependencies": [
            "aws_security_group.ALB_TF_SG",
            "aws_security_group.SG_private_SG",
            "aws_security_group.SG_public_SG",
            "aws_subnet.private_subnet2_ALB",
            "aws_vpc.vpc_ALB"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:694989999113:instance/i-0cd82eb66cf73585b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd82eb66cf73585b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkpdp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058c9150ef8eed3a5",
            "private_dns": "ip-10-0-3-95.ec2.internal",
            "private_ip": "10.0.3.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ba2ffdfba5e1ec0c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f35da3d79b6466dc",
            "tags": {
              "Name": "PrivateEC2-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f2ec47c0a405cce"
            ]
          },
          "dependencies": [
            "aws_security_group.ALB_TF_SG",
            "aws_security_group.SG_private_SG",
            "aws_security_group.SG_public_SG",
            "aws_subnet.private_subnet2_ALB",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PublicEC2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:694989999113:instance/i-0f636999a014175ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f636999a014175ef",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkpdp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed07163ad958f804",
            "private_dns": "ip-10-0-0-206.ec2.internal",
            "private_ip": "10.0.0.206",
            "public_ip": "34.231.242.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0460957a4dcb3e907",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ade959e1e0f0496f",
            "tags": {
              "Name": "PublicEC2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e960b47f90fcb20"
            ]
          },
          "dependencies": [
            "aws_security_group.ALB_TF_SG",
            "aws_security_group.SG_public_SG",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:694989999113:instance/i-04dcc27f2bc1d6e64",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04dcc27f2bc1d6e64",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkpdp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e97dd52599b6bb47",
            "private_dns": "ip-10-0-1-31.ec2.internal",
            "private_ip": "10.0.1.31",
            "public_ip": "54.91.210.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0becc15b532baf7e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-056934491c1a3e10b",
            "tags": {
              "Name": "PublicEC2-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e960b47f90fcb20"
            ]
          },
          "dependencies": [
            "aws_security_group.ALB_TF_SG",
            "aws_security_group.SG_public_SG",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_ALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-018d6a644e6354c09",
            "owner_id": "694989999113",
            "tags": {
              "Name": "IGW_ALB"
            },
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Application_Load_Balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:694989999113:loadbalancer/app/ALB-test-shikha-126/1a17c3d3f69262e4",
            "arn_suffix": "app/ALB-test-shikha-126/1a17c3d3f69262e4",
            "dns_name": "ALB-test-shikha-126-1010345489.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:694989999113:loadbalancer/app/ALB-test-shikha-126/1a17c3d3f69262e4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-test-shikha-126",
            "security_groups": [
              "sg-06e2d665caf2156ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-056934491c1a3e10b"
              },
              {
                "subnet_id": "subnet-0ade959e1e0f0496f"
              }
            ],
            "subnets": [
              "subnet-056934491c1a3e10b",
              "subnet-0ade959e1e0f0496f"
            ],
            "tags": {
              "Environment": "ALB_production"
            },
            "vpc_id": "vpc-01bd6b27aa2fff2b0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ALB_TF_SG",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:694989999113:listener/app/ALB-test-shikha-126/1a17c3d3f69262e4/88ccabb3ebf01f65",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:694989999113:targetgroup/alb-tg/fe2baa2e53a0a120",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:694989999113:listener/app/ALB-test-shikha-126/1a17c3d3f69262e4/88ccabb3ebf01f65",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:694989999113:loadbalancer/app/ALB-test-shikha-126/1a17c3d3f69262e4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.Application_Load_Balancer",
            "aws_lb_target_group.targetgroup_lb",
            "aws_security_group.ALB_TF_SG",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetgroup_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:694989999113:targetgroup/alb-tg/fe2baa2e53a0a120",
            "arn_suffix": "targetgroup/alb-tg/fe2baa2e53a0a120",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:694989999113:targetgroup/alb-tg/fe2baa2e53a0a120",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_targetgroup",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:694989999113:targetgroup/alb-tg/fe2baa2e53a0a120-20200604090225175100000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:694989999113:targetgroup/alb-tg/fe2baa2e53a0a120",
            "target_id": "i-0f636999a014175ef"
          },
          "dependencies": [
            "aws_instance.PublicEC2",
            "aws_lb_target_group.targetgroup_lb",
            "aws_security_group.ALB_TF_SG",
            "aws_security_group.SG_public_SG",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:694989999113:targetgroup/alb-tg/fe2baa2e53a0a120-20200604090225105300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:694989999113:targetgroup/alb-tg/fe2baa2e53a0a120",
            "target_id": "i-04dcc27f2bc1d6e64"
          },
          "dependencies": [
            "aws_instance.PublicEC2",
            "aws_lb_target_group.targetgroup_lb",
            "aws_security_group.ALB_TF_SG",
            "aws_security_group.SG_public_SG",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f78a74e8b3ca179",
            "id": "nat-0e414b5e0c400fac5",
            "network_interface_id": "eni-0c5b526d3f04e935b",
            "private_ip": "10.0.0.74",
            "public_ip": "52.2.176.252",
            "subnet_id": "subnet-0ade959e1e0f0496f",
            "tags": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.EIP_ALB",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d9da1691fb998147",
            "owner_id": "694989999113",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e414b5e0c400fac5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_routetable"
            },
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_eip.EIP_ALB",
            "aws_nat_gateway.NAT_GW",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0080728fe3f6767e6",
            "owner_id": "694989999113",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018d6a644e6354c09",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_ALB",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_association_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025f660cef1a53a53",
            "route_table_id": "rtb-0d9da1691fb998147",
            "subnet_id": "subnet-000aa4e913dc5c5e1"
          },
          "dependencies": [
            "aws_eip.EIP_ALB",
            "aws_nat_gateway.NAT_GW",
            "aws_route_table.private_routetable",
            "aws_subnet.private_subnet2_ALB",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa001c371868a38a",
            "route_table_id": "rtb-0d9da1691fb998147",
            "subnet_id": "subnet-0f35da3d79b6466dc"
          },
          "dependencies": [
            "aws_eip.EIP_ALB",
            "aws_nat_gateway.NAT_GW",
            "aws_route_table.private_routetable",
            "aws_subnet.private_subnet2_ALB",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_association_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea638dd03035044",
            "route_table_id": "rtb-0080728fe3f6767e6",
            "subnet_id": "subnet-0ade959e1e0f0496f"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_ALB",
            "aws_route_table.public_routetable",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d81a028f33f9c4d0",
            "route_table_id": "rtb-0080728fe3f6767e6",
            "subnet_id": "subnet-056934491c1a3e10b"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_ALB",
            "aws_route_table.public_routetable",
            "aws_subnet.public_subnet1_ALB",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB_TF_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694989999113:security-group/sg-06e2d665caf2156ca",
            "description": "ALB_SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e2d665caf2156ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ALB traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB_SG",
            "name_prefix": null,
            "owner_id": "694989999113",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_private_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694989999113:security-group/sg-08f2ec47c0a405cce",
            "description": "ec2_SG_private_SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f2ec47c0a405cce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-03e960b47f90fcb20"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2_SG_private_SG",
            "name_prefix": null,
            "owner_id": "694989999113",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TCP allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_security_group.ALB_TF_SG",
            "aws_security_group.SG_public_SG",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_public_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694989999113:security-group/sg-03e960b47f90fcb20",
            "description": "ec2_SG_public_SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e960b47f90fcb20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e2d665caf2156ca"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_SG_public_SG",
            "name_prefix": null,
            "owner_id": "694989999113",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TCP allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_security_group.ALB_TF_SG",
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2_ALB",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694989999113:subnet/subnet-000aa4e913dc5c5e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-000aa4e913dc5c5e1",
            "map_public_ip_on_launch": false,
            "owner_id": "694989999113",
            "tags": {
              "Name": "private_subnet1_ALB"
            },
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_vpc.vpc_ALB"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694989999113:subnet/subnet-0f35da3d79b6466dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f35da3d79b6466dc",
            "map_public_ip_on_launch": false,
            "owner_id": "694989999113",
            "tags": {
              "Name": "private_subnet2_ALB"
            },
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1_ALB",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694989999113:subnet/subnet-0ade959e1e0f0496f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ade959e1e0f0496f",
            "map_public_ip_on_launch": true,
            "owner_id": "694989999113",
            "tags": {
              "Name": "public_subnet1_ALB"
            },
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_vpc.vpc_ALB"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694989999113:subnet/subnet-056934491c1a3e10b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-056934491c1a3e10b",
            "map_public_ip_on_launch": true,
            "owner_id": "694989999113",
            "tags": {
              "Name": "public_subnet2_ALB"
            },
            "vpc_id": "vpc-01bd6b27aa2fff2b0"
          },
          "dependencies": [
            "aws_vpc.vpc_ALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694989999113:vpc/vpc-01bd6b27aa2fff2b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067e1bfdc26682819",
            "default_route_table_id": "rtb-03e32830043d9fc07",
            "default_security_group_id": "sg-045dc5469e1b9d10c",
            "dhcp_options_id": "dopt-5190942a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01bd6b27aa2fff2b0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03e32830043d9fc07",
            "owner_id": "694989999113",
            "tags": {
              "Name": "vpc_ALB"
            }
          }
        }
      ]
    }
  ]
}